Project

General

Profile

Actions

Bug #7906

closed

loader: biosdisk should report IO error from INT13

Added by Toomas Soome over 6 years ago. Updated over 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
bootloader
Start date:
2017-02-22
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

The current IO calls only register the error condition, but there is no way to get additional information in case some IO error did occur. So we just print out the status byte (AH) from INT13.

Actions #1

Updated by Electric Monk over 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 2e52d653fff46539bd331c34c8027343cafa1ee0

commit  2e52d653fff46539bd331c34c8027343cafa1ee0
Author: Toomas Soome <tsoome@me.com>
Date:   2017-02-27T13:33:10.000Z

    7906 loader: biosdisk should report IO error from INT13
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Reviewed by: Marcel Telka <marcel@telka.sk>
    Approved by: Dan McDonald <danmcd@omniti.com>

Actions

Also available in: Atom PDF